Fix z-index problem with mobile view

--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -3,7 +3,10 @@
 .header__wrapper {
   position: relative;
 }
-
+.header__container-wrapper {
+  position: relative;
+  z-index: 2;
+}
 .header__container {
   position: inherit;
   z-index: 2;
